font size updated

--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -39,7 +39,7 @@
               <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | upcase | escape }}</a>
               {%- endif -%}
             {%- endfor -%}
-
+            <!-- Songhyun removed translate menu
             {%- assign name = 'translate_langs' -%}
             {%- include functions.html func='get_value' -%}
             {%- assign translate_langs = return -%}
@@ -51,6 +51,7 @@
                   {%- include extensions/google-translate.html -%}
               </span>
             {%- endif -%}
+            -->
           </div>
         </nav>
       {%- endif -%}
